little fix with overflow

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -70,6 +70,7 @@
   @include small-size {
     width: 40px;
     height: 40px;
+    right: 45px;
   }
 
   &.active {
